wizard: fix memleaks

https://bugzilla.gnome.org/show_bug.cgi?id=664510